[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland", "dynamic_linking"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3
